tests/NormalTests/paczka1/small_fuzzy/43653562.err
Error in line 3: SfjOIK A834 40,1
Error in line 13: S507 S507 66,3
Error in line 15: S507 A834 61,4
